--- a/src/components/MovieBoard/MovieBoard.css
+++ b/src/components/MovieBoard/MovieBoard.css
@@ -1,5 +1,5 @@
 .outer-MovieBoard {
-    width: 99vw;
+    width: 100vw;
     height: 100vh;
 }
 
